[gd_scene load_steps=16 format=3 uid="uid://ofqkxqxeusvc"]

[ext_resource type="FontFile" uid="uid://b6kw1428uld5n" path="res://Fontes/NixieOne.ttf" id="1_aqbrh"]
[ext_resource type="Script" path="res://Scripts/Menu_secundario.gd" id="1_r82ft"]
[ext_resource type="Texture2D" uid="uid://bo2uf4jqavjxj" path="res://Assets/Outros/Menu-itens/F-titulo.png" id="2_lthhn"]
[ext_resource type="Texture2D" uid="uid://b4kjuhkrx7mf1" path="res://Assets/Outros/Menu-itens/Ra-titulo.png" id="3_h15ur"]
[ext_resource type="Texture2D" uid="uid://r6ckind6yr3l" path="res://Assets/Outros/Menu-itens/atomo.png" id="4_btyv3"]
[ext_resource type="Theme" uid="uid://ebwtkeg64dc6" path="res://Temas/botoes_tema.tres" id="5_xgppo"]
[ext_resource type="Texture2D" uid="uid://chh1ob34yg3jq" path="res://Assets/Outros/GUI.png" id="6_pahws"]

[sub_resource type="LabelSettings" id="LabelSettings_soml2"]
font = ExtResource("1_aqbrh")
font_size = 59

[sub_resource type="Animation" id="Animation_b2ymq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("atomo_menu_animacao/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_btyv3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("atomo_menu_animacao/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("atomo_menu_animacao/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y5t7m"]
resource_name = "atomo_animacao"
length = 4.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("atomo_menu_animacao/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_btyv3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("atomo_menu_animacao/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("atomo_menu_animacao/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sas8c"]
_data = {
"RESET": SubResource("Animation_b2ymq"),
"atomo_animacao": SubResource("Animation_y5t7m")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37i1e"]
texture = ExtResource("6_pahws")
region_rect = Rect2(145, 81, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ftebo"]
texture = ExtResource("6_pahws")
region_rect = Rect2(145, 98, 46, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0ixy4"]
texture = ExtResource("6_pahws")
region_rect = Rect2(145, 98, 46, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1umwq"]
texture = ExtResource("6_pahws")
region_rect = Rect2(145, 98, 46, 13)

[node name="menu_secundario" type="Node2D"]
script = ExtResource("1_r82ft")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.379687
anchor_top = 0.122222
anchor_right = 0.464844
anchor_bottom = 0.218056
grow_horizontal = 2
text = "uga"
label_settings = SubResource("LabelSettings_soml2")

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 789.0
offset_top = 91.0
offset_right = 1023.0
offset_bottom = 160.0
text = "dioativa"
label_settings = SubResource("LabelSettings_soml2")

[node name="F-titulo" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(435, 125)
scale = Vector2(0.492788, 0.491597)
texture = ExtResource("2_lthhn")

[node name="Ra-titulo" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(740, 124)
scale = Vector2(0.505, 0.496875)
texture = ExtResource("3_h15ur")

[node name="atomo_menu_animacao" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_sas8c")
}
autoplay = "atomo_animacao"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/atomo_menu_animacao"]
position = Vector2(640, 128)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_btyv3")
hframes = 42

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -72.0
offset_right = 150.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Continuar" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = ExtResource("5_xgppo")
theme_override_styles/normal = SubResource("StyleBoxTexture_37i1e")
theme_override_styles/hover = SubResource("StyleBoxTexture_ftebo")
text = "Continuar"

[node name="NovoJogo" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = ExtResource("5_xgppo")
theme_override_styles/normal = SubResource("StyleBoxTexture_37i1e")
theme_override_styles/hover = SubResource("StyleBoxTexture_0ixy4")
text = "Novo Jogo"

[node name="Voltar" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = ExtResource("5_xgppo")
theme_override_styles/normal = SubResource("StyleBoxTexture_37i1e")
theme_override_styles/hover = SubResource("StyleBoxTexture_1umwq")
text = "Voltar"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/NovoJogo" to="." method="_on_novo_jogo_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
